# check-cfi

./: .gitignore  Cargo.toml  README.md  results.ods
examples/: Makefile  half_indirect.c  indirect.c
src/: analyze.rs  cfg.rs  io.rs  main.rs  old.rs
test/input/: cfi_half_indirect  cfi_indirect  cfi_single_indirect  cfi_tob_icall  cfi_tob_vcall  half_indirect  indirect  tob_vcall
test/qemu-w-labels/: all.txt
test/qemu-w-labels/ignored_chr/: diff.txt  out.txt
test/qemu-w-labels/ignored_five/: diff.txt
test/qemu-w-labels/ignored_four/: diff.txt
test/qemu-w-labels/ignored_irq/: diff.txt  out.txt
test/qemu-w-labels/ignored_job/: checksum.txt  diff.txt
test/qemu-w-labels/ignored_one/: diff.txt  out.txt
test/qemu-w-labels/ignored_three/: out.txt
test/qemu-w-labels/ignored_two/: checksum.txt  diff.txt
test/qemu-w-labels/ignored_vhost/: out.txt
test/qemu-w-labels/ignored_xen/: checksum.txt  out.csv
test/qemu-w-labels/no_ignore/: checksum.txt  diff.txt  out.csv  out.txt
test/qemu/ignored_five/: checksum.txt  diff.txt  out.csv  out.txt
test/qemu/ignored_four/: checksum.txt  diff.txt  out.csv  out.txt
test/qemu/ignored_one/: checksum.txt  diff.txt  out.csv  out.txt
test/qemu/ignored_six/: checksum.txt  diff.txt  out.csv  out.txt
test/qemu/ignored_three/: checksum.txt  diff.txt  out.csv  out.txt
test/qemu/ignored_two/: checksum.txt  diff.txt  out.csv  out.txt
test/qemu/macro_disabled/: diff.txt  out.csv
test/qemu/no_ignore/: checksum.txt  out.csv  out.txt
test/src/: half_ignorelist.txt  single_indirect.c  vcall.cpp
