[package]
name = "check-cfi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
iced-x86 = "1.21.0"
indicatif = "0.17.8"
object = "0.34.0"
petgraph = "0.6.4"

